# fractals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  settings.cfg
shaders/: default.fsh  default.vsh
src/: common.h  main.cpp  window.cpp  window.h
src/gfx/: ebo.cpp  ebo.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  texture2d.h  vbo.cpp  vbo.h  vertexarray.cpp  vertexarray.h
src/maths/: mat4.h  vec3.h
src/util/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.cpp  imgui_impl_sdlrenderer.h
